# AI-and-Machine-Learning

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
Backpropagation/: neural_network.ipynb  training_data.ipynb
Deep_Learning/: activation_function.ipynb  back_propagation.ipynb  forward_propagation.ipynb  keras_CNN.ipynb  keras_Linear_Regression.ipynb  keras_classification.ipynb  keras_transformers.ipynb
Dimension_Reduction/: PCA.ipynb  t-SNE_UMAP.ipynb
Documentation/: MachineLearningTools.md  MlLifeCycle.md  OverviewMachineLearning.md
Metrics/: ML_Pipleline.ipynb  Regression.ipynb  classification.ipynb
PyTorch/: tensor_1dim.py  tensor_operations.py
PyTorch/Datasets/: dataset_intro.ipynb
Regression/Logistic_Regression/: churnIntro.ipynb  multiclassClassification.ipynb
Regression/Multiple_Regression/: carIntroduction.ipynb
Regression/Simple_Regression/: carIntroduction.ipynb
Supervised_Learning/: Bagging_Boosting.ipynb  KNNIntro.ipynb  SVMImpl.ipynb  decisionTreeIntro.ipynb  regressionTreeIntro.ipynb
Unsupervied_Learning/: DBScan.ipynb  DBScanImpl.py  K_Means.ipynb  k_Means_Intro.ipynb
tensorflow/: intro_cnn.py  intro_sequential.py  tensors.ipynb
tensorflow/Functional_API/: autoencoder.py  intro.py  simple_cnn.keras
tensorflow/SubClassing_API/: add_losses.py  init_weights.py  layer_class.py  serializaitonIntro.py  vae_autoencoder.py
