[project]
name = "ai-and-machine-learning"
version = "0.1.0"
description = "capture different beautiful machine learning techniques and algorithms to prepare data, train data, designing models and deployment of models."
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.10",
    "keras>=3.11.3",
    "learn>=1.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "sci-kit>=0.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow-cpu>=2.20.0",
    "tensorflow[and-cpu]>=2.20.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]
